--- a/index.html
+++ b/index.html
@@ -35,12 +35,11 @@
                             <span class="typewriter-text"></span>
                         </h2>
                         <p>Halo, saya FANDI XD – Web Designer Kreatif!👋,Saya selalu berusaha menghadirkan desain yang tidak hanya terlihat keren, tetapi juga memberikan pengalaman yang nyaman bagi pengguna.</p>
-                        <a href="#" class="btn">Hire me</a>
+                        <a href="https://s.id/Fandi-Xd" class="btn">My Website S.id</a>
                         <div class="social-links">
-                            <a href="#"><i class="fab fa-twitter"></i></a>
-                            <a href="#"><i class="fab fa-github"></i></a>
-                            <a href="#"><i class="fab fa-linkedin"></i></a>
-                            <a href="#"><i class="far fa-envelope"></i></a>
+                            <a href="https://instagram.com/fandi.xd"><i class="fab fa-instagram"></i></a>
+                            <a href="https://github.com/fandixdofc"><i class="fab fa-github"></i></a>
+                            <a href="https:wa.me/6281213958463"><i class="fab fa-whatsapp"></i></a>
                         </div>
                     </div>
 
